[gd_scene load_steps=7 format=3 uid="uid://ofhy6k6i1cjm"]

[ext_resource type="Script" path="res://ModeGame/Enemies/elephant.gd" id="1_g4q4r"]
[ext_resource type="Texture2D" uid="uid://d32155hmo13hh" path="res://ModeGame/Griffins/peter_2008_v2F_hires1-56a00f083df78cafda9fdcb6.jpg" id="2_c1cy6"]
[ext_resource type="Script" path="res://ModeGame/Components/HealthComponent.gd" id="3_40edg"]
[ext_resource type="Script" path="res://ModeGame/Components/HurtBoxComponent.gd" id="4_vrlj2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1knh"]
size = Vector2(342.5, 291)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_07y3d"]
size = Vector2(343, 297)

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(0.285, 0.285)
script = ExtResource("1_g4q4r")

[node name="Square" type="Sprite2D" parent="."]
scale = Vector2(0.23, 0.23)
texture = ExtResource("2_c1cy6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.25, 1.5)
shape = SubResource("RectangleShape2D_i1knh")

[node name="healthComponent" type="Node2D" parent="."]
script = ExtResource("3_40edg")
max_health = 10

[node name="HitBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("4_vrlj2")
health = NodePath("../healthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_07y3d")

[node name="Timer" type="Timer" parent="HitBoxComponent"]

[connection signal="timeout" from="HitBoxComponent/Timer" to="HitBoxComponent" method="_on_timer_timeout"]
